--- a/src/com/jstore/views/resources/ProductosView.properties
+++ b/src/com/jstore/views/resources/ProductosView.properties
@@ -5,7 +5,6 @@ jPanel1.border.title=Filtros...
 jLabel3.text=Id:
 jLabel1.text=Nombre:
 jPanel2.border.title=Datos
-searchButton1.text=Eliminar
 newButton.text=Nuevo
 jLabel10.text=Proveedor
 jLabel6.text=Nombre
@@ -14,7 +13,6 @@ saveButton.text=Guardar
 jLabel5.text=Costo:
 jLabel7.text=Descripcion:
 txtDescripcion.text=
-jLabel8.text=Minutos Maquina:
 #NOI18N
 txtId.background=128, 128, 128
 txtCosto.text=
@@ -23,3 +21,4 @@ masterTable.columnModel.title4=Costo
 masterTable.columnModel.title2=Descripcion
 masterTable.columnModel.title1=Nombre
 masterTable.columnModel.title3=Minutos Maquina
+deleteButton.text=Eliminar
