[no commit message]

--- a/src/com/jstore/views/resources/ProductosView.properties
+++ b/src/com/jstore/views/resources/ProductosView.properties
@@ -4,17 +4,11 @@ searchButton.text=Buscar
 jPanel1.border.title=Filtros...
 jLabel3.text=Id:
 jLabel1.text=Nombre:
-jPanel2.border.title=Datos
 newButton.text=Nuevo
-jLabel10.text=Proveedor
-jLabel6.text=Nombre
-jLabel4.text=Id
 saveButton.text=Guardar
 jLabel5.text=Costo:
 jLabel7.text=Descripcion:
 txtDescripcion.text=
-#NOI18N
-txtId.background=128, 128, 128
 txtCosto.text=
 masterTable.columnModel.title0=Id
 masterTable.columnModel.title4=Costo
@@ -22,3 +16,17 @@ masterTable.columnModel.title2=Descripcion
 masterTable.columnModel.title1=Nombre
 masterTable.columnModel.title3=Minutos Maquina
 deleteButton.text=Eliminar
+datosPanel.border.title=Datos
+newLabel.text=* NUEVO
+#NOI18N
+newLabel.foreground=2, 135, 13
+#NOI18N
+newLabel.background=173, 253, 145
+#NOI18N
+deleteButton.icon=icons/dialog-cancel.png
+#NOI18N
+newButton.icon=icons/document-new.png
+#NOI18N
+saveButton.icon=icons/media-floppy.png
+#NOI18N
+searchButton.icon=icons/edit-find.png
