[no commit message]

--- a/src/com/jstore/views/resources/CitasView.properties
+++ b/src/com/jstore/views/resources/CitasView.properties
@@ -40,3 +40,4 @@ addSesionButton.text=
 addSesionButton.icon=icons/list-add.png
 #NOI18N
 removeSesionButton.icon=icons/list-remove.png
+txtNombre.text=
