--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,8 @@ javac.classpath=\
     ${file.reference.swingx-beaninfo-1.6.1.jar}:\
     ${file.reference.swingx-1.6.1.jar}:\
     ${file.reference.mysql-connector-java-5.1.6-bin.jar}:\
-    ${file.reference.commons-beanutils-core-1.8.3.jar}
+    ${file.reference.commons-beanutils-core-1.8.3.jar}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
