[no commit message]

--- a/src/com/jstore/components/resources/NewMasterDetailForm.properties
+++ b/src/com/jstore/components/resources/NewMasterDetailForm.properties
@@ -9,8 +9,16 @@ refreshButton.text=Refresh
 saveButton.text=Save
 duracionLabel.text=Duracion:
 entityManager.persistenceUnit=jstorePU
-query.query=SELECT C FROM Cliente C
+query.query=SELECT c FROM Cliente c
 clienteLabel.text=Cliente:
 sesionLabel.text=Sesion:
 newDetailButton.text=New
 deleteDetailButton.text=Delete
+apellidoLabel.text=Apellido:
+emailLabel.text=Email:
+fechaUltimaCompraLabel.text=Fecha Ultima Compra:
+bbpinLabel.text=Bbpin:
+telefonoLabel.text=Telefono:
+nombreLabel.text=Nombre:
+idTipoLabel.text=Id Tipo:
+direccionLabel.text=Direccion:
