--- a/src/com/jstore/views/resources/ClientesView.properties
+++ b/src/com/jstore/views/resources/ClientesView.properties
@@ -1,7 +1,5 @@
 Form.border.title=Clientes
 nuevoButton.text=Nuevo
-jPanel1.border.title=Filtros...
-searchButton.text=Buscar
 jLabel1.text=Nombre:
 jLabel2.text=Apellido:
 jPanel2.border.title=Datos
@@ -17,19 +15,28 @@ masterTable.columnModel.title4=Email
 masterTable.columnModel.title3=Telefono
 masterTable.columnModel.title2=Celular
 masterTable.columnModel.title1=Apellido
-masterTable.columnModel.title6=Id
-masterTable.columnModel.title7=Ultima Compra
-apellidoTxt.text=
 #NOI18N
 idTxt.background=128, 128, 128
-saveButton.text=Guardar
-newButton.text=Nuevo
 #NOI18N
 Form.border.titleColor=0, 0, 0
 searchNombreTxt.text=
-searchApellidoTxt.text=
-jLabel4.text=Id
-jLabel6.text=Nombre
-jLabel10.text=Apellido
-searchIdTxt.text=
+#NOI18N
+newLabel.foreground=2, 135, 13
+#NOI18N
+newLabel.background=173, 253, 145
+newLabel.text=* NUEVO
+txtApellido.text=
+searchButton.text=Buscar
+saveButton.text=Guardar
+newButton.text=Nuevo
 deleteButton.text=Eliminar
+#NOI18N
+newButton.icon=icons/document-new.png
+#NOI18N
+saveButton.icon=icons/media-floppy.png
+#NOI18N
+deleteButton.icon=icons/dialog-cancel.png
+#NOI18N
+searchButton.icon=icons/edit-find.png
+#NOI18N
+txtNacimiento.foreground=16, 16, 16
