--- a/src/com/jstore/views/resources/VentasView.properties
+++ b/src/com/jstore/views/resources/VentasView.properties
@@ -4,15 +4,14 @@
 Form.border.title=Ventas
 jPanel1.border.title=Productos
 jPanel3.border.title=Venta
-jPanel4.border.title=Cliente
 jLabel1.text=Buscar
 jLabel4.text=Total:
 #NOI18N
 jLabel4.font=DejaVu Sans-Plain-24
 searchProductoTxt.text=
-nombreClienteTxt.text=
-buscarClienteButton.text=Buscar
 insertarButton.text=Insertar
 eliminarButton.text=Eliminar
 guardarButton.text=Guardar
 jFormattedTextField1.text=jFormattedTextField1
+jPanel4.border.title=Cliente
+txtCliente.text=
