[no commit message]

--- a/src/com/jstore/views/resources/ProductosView.properties
+++ b/src/com/jstore/views/resources/ProductosView.properties
@@ -29,7 +29,6 @@ newButton.icon=icons/document-new.png
 saveButton.icon=icons/media-floppy.png
 #NOI18N
 searchButton.icon=icons/edit-find.png
-jPanel2.border.title=Sesiones
 jTable1.columnModel.title0=Title 1
 jTable1.columnModel.title3=Title 4
 jTable1.columnModel.title2=Title 3
@@ -39,3 +38,4 @@ addSesionButton.text=
 addSesionButton.icon=icons/list-add.png
 #NOI18N
 removeSesionButton.icon=icons/list-remove.png
+sesionesJPanel.border.title=Sesiones
